# 3D-Point-cloud-Visualizer

./: 3ddafrica_kinect_viewer.pro  CMakeLists.txt  README.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
